--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -23,7 +23,7 @@
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
+                <li><a href="https://github.com/Mr-Chang95/Disaster_Reponse_Pipeline">Creator's Contact Github</a></li>
             </ul>
         </div>
     </div>
